Improve interface3.pdf index by setting module for various commands

--- a/l3kernel/doc/source3body.tex
+++ b/l3kernel/doc/source3body.tex
@@ -257,7 +257,7 @@ following argument specifiers:
     applies to delimited values (where the argument must be terminated
     by some specified string).
   \item[\texttt{D}] The \texttt{D} stands for \textbf{Do not use}.
-    All of the \TeX{} primitives are initially \cs{let} to a \texttt{D}
+    All of the \TeX{} primitives are initially \cs[no-index]{let} to a \texttt{D}
     name, and some are then given a second name.
     These functions have no standardized syntax, they are engine
     dependent and their name can change without warning, thus their
