--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -4387,7 +4387,7 @@ and all files in that bundle must be distributed together.
         \str_case:fn { \str_head:N \l_@@_index_key_tl }
           {
             { q } { \tl_set:Nn \l_@@_index_module_tl { quark } }
-            { s } { \tl_set:Nn \l_@@_index_module_tl { quark } }
+            { s } { \tl_set:Nn \l_@@_index_module_tl { scan } }
           }
         \@@_key_pop:
         \@@_key_pop:
