--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -650,29 +650,29 @@
 %
 % \section{Some useful constants, and scratch variables}
 %
-% \begin{variable}[added = 2012-05-08]{\c_zero_fp, \c_minus_zero_fp}
+% \begin{variable}[added = 2012-05-08, module = fp]{\c_zero_fp, \c_minus_zero_fp}
 %   Zero, with either sign.
 % \end{variable}
 %
-% \begin{variable}[added = 2012-05-08]{\c_one_fp}
+% \begin{variable}[added = 2012-05-08, module = fp]{\c_one_fp}
 %   One as an \texttt{fp}: useful for comparisons in some places.
 % \end{variable}
 %
-% \begin{variable}[added = 2012-05-08]{\c_inf_fp, \c_minus_inf_fp}
+% \begin{variable}[added = 2012-05-08, module = fp]{\c_inf_fp, \c_minus_inf_fp}
 %   Infinity, with either sign.  These can be input directly in a
 %   floating point expression as \texttt{inf} and \texttt{-inf}.
 % \end{variable}
 %
-% \begin{variable}[updated = 2012-05-08]{\c_e_fp}
+% \begin{variable}[updated = 2012-05-08, module = fp]{\c_e_fp}
 %   The value of the base of the natural logarithm, $\mathrm{e} = \exp(1)$.
 % \end{variable}
 %
-% \begin{variable}[updated = 2013-11-17]{\c_pi_fp}
+% \begin{variable}[updated = 2013-11-17, module = fp]{\c_pi_fp}
 %   The value of~$\pi$.  This can be input directly in a floating point
 %   expression as~\texttt{pi}.
 % \end{variable}
 %
-% \begin{variable}[added = 2012-05-08, updated = 2013-11-17]
+% \begin{variable}[added = 2012-05-08, updated = 2013-11-17, module = fp]
 %   {\c_one_degree_fp}
 %   The value of $1^{\circ}$ in radians.  Multiply an angle given in
 %   degrees by this value to obtain a result in radians.  Note that
@@ -681,14 +681,14 @@
 %   can be accessed as \texttt{deg}.
 % \end{variable}
 %
-% \begin{variable}{\l_tmpa_fp, \l_tmpb_fp}
+% \begin{variable}[module = fp]{\l_tmpa_fp, \l_tmpb_fp}
 %   Scratch floating points for local assignment. These are never used by
 %   the kernel code, and so are safe for use with any \LaTeX3-defined
 %   function. However, they may be overwritten by other non-kernel
 %   code and so should only be used for short-term storage.
 % \end{variable}
 %
-% \begin{variable}{\g_tmpa_fp, \g_tmpb_fp}
+% \begin{variable}[module = fp]{\g_tmpa_fp, \g_tmpb_fp}
 %   Scratch floating points for global assignment. These are never used by
 %   the kernel code, and so are safe for use with any \LaTeX3-defined
 %   function. However, they may be overwritten by other non-kernel
@@ -757,7 +757,7 @@
 %   \emph{This function is experimental, and may be altered or removed.}
 % \end{function}
 %
-% \begin{variable}
+% \begin{variable}[module = fp]
 %   {
 %     flag fp_overflow,
 %     flag fp_underflow,
@@ -843,7 +843,7 @@
 % valid floating point numbers.  Note that the latter could be mistaken
 % with the difference of \enquote{\texttt{e}} and $1$.  To avoid
 % confusions, the base of natural logarithms cannot be input as |e| and
-% should be input as \texttt{exp(1)} or \cs{c_e_fp} (which is faster).
+% should be input as \texttt{exp(1)} or \cs[module = fp]{c_e_fp} (which is faster).
 %
 % Special numbers are input as follows:
 % \begin{itemize}
@@ -904,7 +904,7 @@
 % specified, providing a tuple as an argument of any other operation
 % yields the \enquote{invalid operation} exception and a \nan{} result.
 %
-% \begin{function}[tested = m3fp-logic002]{?:}
+% \begin{function}[tested = m3fp-logic002, module = {}]{?:}
 %   \begin{syntax}
 %     \cs{fp_eval:n} \{ \meta{operand_1} |?| \meta{operand_2} |:| \meta{operand_3} \}
 %   \end{syntax}
@@ -1350,16 +1350,16 @@
 %
 % \begin{variable}[tested = m3fp-parse001]{inf, nan}
 %   The special values $+\infty$, $-\infty$, and \nan{} are represented
-%   as \texttt{inf}, \texttt{-inf} and \texttt{nan} (see \cs{c_inf_fp},
-%   \cs{c_minus_inf_fp} and \cs{c_nan_fp}).
+%   as \texttt{inf}, \texttt{-inf} and \texttt{nan} (see \cs[module = fp]{c_inf_fp},
+%   \cs[module = fp]{c_minus_inf_fp} and \cs[module = fp]{c_nan_fp}).
 % \end{variable}
 %
 % \begin{variable}[tested = m3fp-parse001]{pi}
-%   The value of $\pi$ (see \cs{c_pi_fp}).
+%   The value of $\pi$ (see \cs[module = fp]{c_pi_fp}).
 % \end{variable}
 %
 % \begin{variable}[tested = m3fp-parse001]{deg}
-%   The value of $1^{\circ}$ in radians (see \cs{c_one_degree_fp}).
+%   The value of $1^{\circ}$ in radians (see \cs[module = fp]{c_one_degree_fp}).
 % \end{variable}
 %
 % \begin{variable}[tested = m3fp-parse001]
@@ -1487,8 +1487,8 @@
 %     hard-code the logarithms of $44$ small integers instead of $9$.
 %   \item Improve notations in the explanations of the division
 %     algorithm (\pkg{l3fp-basics}).
-%   \item Understand and document \cs{__fp_basics_pack_weird_low:NNNNw}
-%     and \cs{__fp_basics_pack_weird_high:NNNNNNNNw} better.  Move the
+%   \item Understand and document \cs[no-index]{__fp_basics_pack_weird_low:NNNNw}
+%     and \cs[no-index]{__fp_basics_pack_weird_high:NNNNNNNNw} better.  Move the
 %     other \texttt{basics_pack} auxiliaries to \pkg{l3fp-aux} under a
 %     better name.
 %   \item Find out if underflow can really occur for trigonometric
