Index correctly (or do not index) some more commands

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -2119,14 +2119,14 @@
 % \begin{macro}{\@@_expandable_error:w}
 %   In expansion only context, we cannot use the normal means of
 %   reporting errors. Instead, we feed \TeX{} an undefined control
-%   sequence, \cs{LaTeX3 error:}. It is thus interrupted, and shows
+%   sequence, \cs[module = {}]{LaTeX3 error:}. It is thus interrupted, and shows
 %   the context, which thanks to the odd-looking \cs{use:n} is
 %   \begin{verbatim}
 %     <argument> \LaTeX3 error:
 %                               The error message.
 %   \end{verbatim}
 %   In other words, \TeX{} is processing the argument of \cs{use:n},
-%   which is \cs{LaTeX3 error:} \meta{error message}.
+%   which is \cs[module = {}]{LaTeX3 error:} \meta{error message}.
 %   Then \cs{@@_expandable_error:w} cleans up. In fact, there
 %   is an extra subtlety: if the user inserts tokens for error recovery,
 %   they should be kept. Thus we also use an odd space character
