--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -66,7 +66,7 @@
 %   \tl_set:Nn \l_my_tl { That~cat. }
 %   \regex_replace_once:nnN { at } { is } \l_my_tl
 % \end{verbatim}
-% the token list variable \cs{l_my_tl} holds the text
+% the token list variable \cs[no-index]{l_my_tl} holds the text
 % \enquote{\texttt{This cat.}}, where the first
 % occurrence of \enquote{\texttt{at}} was replaced
 % by \enquote{\texttt{is}}. A more complicated example is
@@ -296,13 +296,13 @@
 % \begin{verbatim}
 %   \regex_extract_all:nnN { a \K . } { a123aaxyz } \l_foo_seq
 % \end{verbatim}
-% results in \cs{l_foo_seq} containing the items |{1}| and |{a}|: the
+% results in \cs[no-index]{l_foo_seq} containing the items |{1}| and |{a}|: the
 % true matches are |{a1}| and |{aa}|, but they are trimmed by the use of
 % |\K|. The |\K| command does not affect capturing groups: for instance,
 % \begin{verbatim}
 %   \regex_extract_once:nnN { (. \K c)+ \d } { acbc3 } \l_foo_seq
 % \end{verbatim}
-% results in \cs{l_foo_seq} containing the items |{c3}| and |{bc}|: the
+% results in \cs[no-index]{l_foo_seq} containing the items |{c3}| and |{bc}|: the
 % true match is |{acbc3}|, with first submatch |{bc}|, but |\K| resets
 % the beginning of the match to the last position where it appears.
 %
@@ -447,7 +447,7 @@
 %   \tl_set:Nn \l_my_tl { Hello,~world! }
 %   \regex_replace_all:nnN { ([er]?l|o) . } { (\0--\1) } \l_my_tl
 % \end{verbatim}
-% results in \cs{l_my_tl} holding |H(ell--el)(o,--o) w(or--o)(ld--l)!|
+% results in \cs[no-index]{l_my_tl} holding |H(ell--el)(o,--o) w(or--o)(ld--l)!|
 %
 % The submatches are numbered according to the order in which the
 % opening parenthesis of capturing groups appear in the regular
@@ -497,7 +497,7 @@
 %   \tl_set:Nn \l_my_tl { one , two , one , one }
 %   \regex_replace_all:nnN { [^,]+ } { \u{l_my_\0_tl} } \l_my_tl
 % \end{verbatim}
-% results in \cs{l_my_tl} holding |first,\emph{second},first,first|.
+% results in \cs[no-index]{l_my_tl} holding |first,\emph{second},first,first|.
 %
 % Regex replacement is also a convenient way to produce token lists
 % with arbitrary category codes.  For instance
@@ -603,7 +603,7 @@
 %     \int_new:N \l_foo_int
 %     \regex_count:nnN { (b+|c) } { abbababcbb } \l_foo_int
 %   \end{verbatim}
-%   results in \cs{l_foo_int} taking the value $5$.
+%   results in \cs[no-index]{l_foo_int} taking the value $5$.
 % \end{function}
 %
 % \section{Submatch extraction}
@@ -631,10 +631,10 @@
 %   Then the regular expression (anchored at the start with |\A| and
 %   at the end with |\Z|) must match the whole token list. The first
 %   capturing group, |(La)?|, matches |La|, and the second capturing
-%   group, |(!*)|, matches |!!!|. Thus, |\l_foo_seq| contains as a result
+%   group, |(!*)|, matches |!!!|. Thus, \cs[no-index]{l_foo_seq} contains as a result
 %   the items |{LaTeX!!!}|, |{La}|, and |{!!!}|, and the \texttt{true}
 %   branch is left in the input stream.
-%   Note that the $n$-th item of |\l_foo_seq|, as obtained using
+%   Note that the $n$-th item of \cs[no-index]{l_foo_seq}, as obtained using
 %   \cs{seq_item:Nn}, correspond to the submatch numbered $(n-1)$ in
 %   functions such as \cs{regex_replace_once:nnN}.
 % \end{function}
