--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -583,7 +583,7 @@
 %     \tl_map_tokens:Nn \l_my_tl { \prg_replicate:nn { 2 } }
 %   \end{verbatim}
 %   expands to twice each item in the \meta{tl~var}: for each item in
-%   |\l_my_tl| the function \cs{prg_replicate:nn} receives |2| and
+%   \cs[no-index]{l_my_tl} the function \cs{prg_replicate:nn} receives |2| and
 %   \meta{item} as its two arguments.  The function
 %   \cs{tl_map_inline:Nn} is typically faster but is not expandable.
 % \end{function}
