--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -917,7 +917,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{'\__kernel_kern:n}
+% \begin{macro}{\__kernel_kern:n}
 %   We need kerns in a few places. At present, we don't have a module for
 %   this concept, so it goes in at first use: here. The idea is to avoid
 %   repeated use of the bare primitive.
