Fix bookmark levels by a simple hack in l3doc (fixes #860)
Simply \let all of the \section and similar commands to the level
above.  I've also fixed up a few instances where the \section/\subsection
usage was not very consistent with other files.

--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -714,7 +714,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \subsubsection{Deprecated \pkg{l3tl} functions}
+% \subsection{Deprecated \pkg{l3tl} functions}
 %
 %    \begin{macrocode}
 %<@@=tl>
