Fix some error messages (kernel -> regex)

--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -3158,7 +3158,7 @@
             \@@_compile_C_loop:NN
           }
           {
-            \__kernel_msg_error:nnn { kernel } { missing-lbrace } { (?C }
+            \__kernel_msg_error:nnn { regex } { missing-lbrace } { (?C }
             \@@_compile_raw:N (
             \@@_compile_raw:N ?
             \@@_compile_raw:N C
