Doc typo (fixes #876)

--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -92,8 +92,8 @@
 % \begin{function}[EXP, pTF, added = 2012-06-20]
 %   {\coffin_if_exist:N, \coffin_if_exist:c}
 %   \begin{syntax}
-%     \cs{coffin_if_exist_p:N} \meta{box}
-%     \cs{coffin_if_exist:NTF} \meta{box} \Arg{true code} \Arg{false code}
+%     \cs{coffin_if_exist_p:N} \meta{coffin}
+%     \cs{coffin_if_exist:NTF} \meta{coffin} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Tests whether the \meta{coffin} is currently defined.
 % \end{function}
