--- a/l3kernel/l3text.dtx
+++ b/l3kernel/l3text.dtx
@@ -637,6 +637,7 @@
 % \begin{macro}[EXP]{\@@_expand_replace:N}
 % \begin{macro}[EXP]{\@@_expand_replace:n}
 % \begin{macro}[EXP]{\@@_expand_cs_expand:N}
+% \begin{macro}[EXP]{\@@_expand_noexpand:w}
 % \begin{macro}[EXP]{\@@_expand_noexpand:nn}
 %   After precautions against |&| tokens, start a simple loop: that of
 %   course means that \enquote{text} cannot contain the two recursion
@@ -996,14 +997,19 @@
 %   Finally, expand any macros which can be: this then loops back around to
 %   deal with what they produce. The only issue is if the token is
 %   \cs{exp_not:n}, as that must apply to the following balanced text.
-%   There might be an \cs{exp_after:wN} there, so we check for it.
+%   Expand everything that follows such an \cs{exp_not:n} (in principle
+%   we should actually expand tokens and discard any spaces or \cs{scan_stop:},
+%   but this is messy to ensure safely).
 %    \begin{macrocode}
 \cs_new:Npn \@@_expand_cs_expand:N #1
   {
     \@@_if_expandable:NTF #1
       {
         \token_if_eq_meaning:NNTF #1 \exp_not:n
-          { \@@_expand_noexpand:w }
+          {
+            \exp_after:wN \@@_expand_noexpand:w
+            \exp:w \exp_end_continue_f:w
+          }
           { \exp_after:wN \@@_expand_loop:w #1 }
       }
       {
@@ -1015,10 +1021,12 @@
   { \@@_expand_noexpand:nn {#1} }
 \cs_new:Npn \@@_expand_noexpand:nn #1#2
   {
-    #1 \@@_expand_store:n #1 {#2}
+    \exp_after:wN \@@_expand_store:n \exp_after:wN
+      { \__kernel_exp_not:w #1 {#2} }
     \@@_expand_loop:w
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
