Make \regex_show:n show printable characters (fixes #590)
Previously only the charcode was shown, which made it harder to
debug things.

--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -509,7 +509,7 @@
 %   which never change.
 % \end{function}
 %
-% \begin{function}[added = 2017-05-26]{\regex_show:n, \regex_show:N}
+% \begin{function}[added = 2017-05-26, updated = 2021-04-15]{\regex_show:n, \regex_show:N}
 %   \begin{syntax}
 %     \cs{regex_show:n} \Arg{regex}
 %   \end{syntax}
@@ -3554,18 +3554,18 @@
       \cs_set:Npn \@@_A_test: { anchor~at~start~(\iow_char:N\\A) }
       \cs_set:Npn \@@_G_test: { anchor~at~start~of~match~(\iow_char:N\\G) }
       \cs_set_protected:Npn \@@_item_caseful_equal:n ##1
-        { \@@_show_one:n { char~code~\int_eval:n{##1} } }
+        { \@@_show_one:n { char~code~\@@_show_char:n{##1} } }
       \cs_set_protected:Npn \@@_item_caseful_range:nn ##1##2
         {
           \@@_show_one:n
-            { range~[\int_eval:n{##1}, \int_eval:n{##2}] }
+            { range~[\@@_show_char:n{##1}, \@@_show_char:n{##2}] }
         }
       \cs_set_protected:Npn \@@_item_caseless_equal:n ##1
-        { \@@_show_one:n { char~code~\int_eval:n{##1}~(caseless) } }
+        { \@@_show_one:n { char~code~\@@_show_char:n{##1}~(caseless) } }
       \cs_set_protected:Npn \@@_item_caseless_range:nn ##1##2
         {
           \@@_show_one:n
-            { Range~[\int_eval:n{##1}, \int_eval:n{##2}]~(caseless) }
+            { Range~[\@@_show_char:n{##1}, \@@_show_char:n{##2}]~(caseless) }
         }
       \cs_set_protected:Npn \@@_item_catcode:nT
         { \@@_show_item_catcode:NnT \c_true_bool }
@@ -3574,7 +3574,7 @@
       \cs_set_protected:Npn \@@_item_reverse:n
         { \@@_show_scope:nn { Reversed~match } }
       \cs_set_protected:Npn \@@_item_exact:nn ##1##2
-        { \@@_show_one:n { char~##2,~catcode~##1 } }
+        { \@@_show_one:n { char~\@@_show_char:n{##2},~catcode~##1 } }
       \cs_set_eq:NN \@@_item_exact_cs:n \@@_show_item_exact_cs:n
       \cs_set_protected:Npn \@@_item_cs:n
         { \@@_show_scope:nn { control~sequence } }
@@ -3586,6 +3586,19 @@
       \exp_args:NNNo
     \group_end:
     \tl_set:Nn \l_@@_internal_a_tl { \l_@@_build_tl }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP]{\@@_show_char:n}
+%   Show a single character, together with its ascii representation if available.
+%   This could be extended to beyond ascii.  It is not ideal for parentheses themselves.
+%    \begin{macrocode}
+\cs_new:Npn \@@_show_char:n #1
+  {
+    \int_eval:n {#1}
+    \int_compare:nT { 32 <= #1 <= 126 }
+      { ~ ( \char_generate:nn {#1} {12} ) }
   }
 %    \end{macrocode}
 % \end{macro}
