Document that TeX ignores ~ at the start of a line (fix #125)
I put the info as a texnote in the documentation of \ExplSyntaxOn
in l3bootstrap since this is the only place where we say that ~ can
be used to insert a space.

--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -63,11 +63,18 @@
 %     \cs{ExplSyntaxOn} \meta{code} \cs{ExplSyntaxOff}
 %   \end{syntax}
 %   The \cs{ExplSyntaxOn} function switches to a category code
-%   r\'{e}gime in which spaces are ignored and in which the colon (|:|)
+%   regime in which spaces and new lines are ignored, and in which the colon (|:|)
 %   and underscore (|_|) are treated as \enquote{letters}, thus allowing
 %   access to the names of code functions and variables. Within this
 %   environment, |~| is used to input a space. The \cs{ExplSyntaxOff}
-%   reverts to the document category code r\'{e}gime.
+%   reverts to the document category code regime.
+%   \begin{texnote}
+%     Spaces introduced by~|~| behave much in the same way as normal
+%     space characters in the standard category code regime: they are
+%     ignored after a control word or at the start of a line, and
+%     multiple consecutive~|~| are equivalent to a single one.  However,
+%     |~|~is \emph{not} ignored at the end of a line.
+%   \end{texnote}
 % \end{function}
 %
 % \begin{function}[updated = 2017-03-19]
