--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1865,6 +1865,7 @@
     \c_@@_coding_error_text_tl
     Functions~defined~through~\iow_char:N\\cs_new:Nn~must~have~
     a~signature~consisting~of~only~normal~arguments~'N'~and~'n'.~
+    The~signature~'#2'~of~'#1'~contains~other~arguments~'#3'.~
     To~define~variants~use~\iow_char:N\\cs_generate_variant:Nn~
     and~to~define~other~functions~use~\iow_char:N\\cs_new:Npn.
   }
