l3regex: Forbid unescaped left braces in \c and \u escapes
Of course, \c{ \{ } with an escaped brace still works fine.

--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -3289,6 +3289,21 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}+\@@_compile_{:+
+%   We forbid unescaped left braces inside a |\c{...}| escape because
+%   they otherwise lead to the confusing question of whether the first
+%   right brace in |\c{{}x}| should end |\c| or whether one should
+%   match braces.
+%    \begin{macrocode}
+\cs_new_protected:cpn { @@_compile_ \c_left_brace_str : }
+  {
+    \@@_if_in_cs:TF
+      { \__kernel_msg_error:nnn { regex } { cu-lbrace } { c } }
+      { \exp_after:wN \@@_compile_raw:N \c_left_brace_str }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}+\@@_compile_}:+
 % \begin{macro}{\@@_compile_end_cs:}
 % \begin{macro}[EXP]{\@@_compile_cs_aux:Nn, \@@_compile_cs_aux:NNnnnN}
@@ -3433,7 +3448,14 @@
           {
             \exp_after:wN \token_if_eq_charcode:NNTF \c_right_brace_str #2
               { \if_false: { \fi: } \l_@@_internal_b_tl }
-              { #2 \@@_compile_u_loop:NN }
+              {
+                \if_charcode:w \c_left_brace_str #2
+                  \__kernel_msg_expandable_error:nnn { regex } { cu-lbrace } { u }
+                \else:
+                  #2
+                \fi:
+                \@@_compile_u_loop:NN
+              }
           }
           {
             \if_false: { \fi: }
@@ -5387,7 +5409,11 @@
           \if_charcode:w \c_right_brace_str ##1
             \@@_replacement_rbrace:N
           \else:
-            \@@_replacement_normal:n
+            \if_charcode:w \c_left_brace_str ##1
+              \@@_replacement_lbrace:N
+            \else:
+              \@@_replacement_normal:n
+            \fi:
           \fi:
           ##1
         }
@@ -5566,8 +5592,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_replacement_g:w #1#2
   {
-    \@@_two_if_eq:NNNNTF
-      #1 #2 \@@_replacement_normal:n \c_left_brace_str
+    \token_if_eq_meaning:NNTF #1 \@@_replacement_lbrace:N
       { \l_@@_internal_a_int = \@@_replacement_g_digits:NN }
       { \@@_replacement_error:NNN g #1 #2 }
   }
@@ -5614,15 +5639,15 @@
   {
     \token_if_eq_meaning:NNTF #1 \@@_replacement_normal:n
       {
-        \exp_after:wN \token_if_eq_charcode:NNTF \c_left_brace_str #2
-          { \@@_replacement_cu_aux:Nw \@@_replacement_exp_not:N }
-          {
-            \cs_if_exist:cTF { @@_replacement_c_#2:w }
-              { \@@_replacement_cat:NNN #2 }
-              { \@@_replacement_error:NNN c #1#2 }
-          }
+        \cs_if_exist:cTF { @@_replacement_c_#2:w }
+          { \@@_replacement_cat:NNN #2 }
+          { \@@_replacement_error:NNN c #1#2 }
       }
-      { \@@_replacement_error:NNN c #1#2 }
+      {
+        \token_if_eq_meaning:NNTF #1 \@@_replacement_lbrace:N
+          { \@@_replacement_cu_aux:Nw \@@_replacement_exp_not:N }
+          { \@@_replacement_error:NNN c #1#2 }
+      }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -5656,8 +5681,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_replacement_u:w #1#2
   {
-    \@@_two_if_eq:NNNNTF
-      #1 #2 \@@_replacement_normal:n \c_left_brace_str
+    \token_if_eq_meaning:NNTF #1 \@@_replacement_lbrace:N
       { \@@_replacement_cu_aux:Nw \@@_replacement_exp_not:V }
       { \@@_replacement_error:NNN u #1#2 }
   }
@@ -5674,6 +5698,21 @@
     \if_int_compare:w \l_@@_replacement_csnames_int > 0 \exp_stop_f:
       \tl_build_put_right:Nn \l_@@_build_tl { \cs_end: }
       \int_decr:N \l_@@_replacement_csnames_int
+    \else:
+      \@@_replacement_normal:n {#1}
+    \fi:
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\@@_replacement_lbrace:N}
+%   Within a |\c{...}| or |\u{...}| construction, this is
+%   forbidden. Otherwise, this is a raw left brace.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_replacement_lbrace:N #1
+  {
+    \if_int_compare:w \l_@@_replacement_csnames_int > 0 \exp_stop_f:
+      \__kernel_msg_error:nnn { regex } { cu-lbrace } { u }
     \else:
       \@@_replacement_normal:n {#1}
     \fi:
@@ -7021,6 +7060,13 @@
     The~'\iow_char:N\\cC'~construction~restricts~the~next~item~to~be~a~
     control~sequence~or~the~next~group~to~be~made~of~control~sequences.~
     It~only~makes~sense~to~follow~it~by~'.'~or~by~a~group.
+  }
+\__kernel_msg_new:nnnn { regex } { cu-lbrace }
+  { Left~braces~must~be~escaped~in~'\iow_char:N\\#1{...}'. }
+  {
+    Constructions~such~as~'\iow_char:N\\#1{...\iow_char:N\{...}'~are~
+    not~allowed~and~should~be~replaced~by~
+    '\iow_char:N\\#1{...\token_to_str:N\{...}'.
   }
 \__kernel_msg_new:nnnn { regex } { c-lparen-in-class }
   { Catcode~test~cannot~apply~to~group~in~character~class }
