Document use of l3regex to make tl with arbitrary catcodes [ci skip]

--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -499,6 +499,15 @@
 % \end{verbatim}
 % results in \cs{l_my_tl} holding |first,\emph{second},first,first|.
 %
+% Regex replacement is also a convenient way to produce token lists
+% with arbitrary category codes.  For instance
+% \begin{verbatim}
+% \tl_clear:N \l_tmpa_tl
+% \regex_replace_all:nnN { } { \cU\% \cA\~ } \l_tmpa_tl
+% \end{verbatim}
+% results in \cs[no-index]{l_tmpa_tl} containing the percent character
+% with category code~$7$ (superscript) and an active tilde character.
+%
 % \section{Pre-compiling regular expressions}
 %
 % If a regular expression is to be used several times,
