Error when referring to inexistent group in a regex replacement
Previously \regex_replace_all:nnN { ((a)b)c } { \7 } \l_tmpa_tl would
silently ignore \7 since there were fewer than 7 groups in the regex

--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -5576,6 +5576,9 @@
   {
     \if_int_compare:w #1 < \l_@@_capturing_group_int
       \@@_replacement_put_submatch_aux:n {#1}
+    \else:
+      \__kernel_msg_expandable_error:nnff { regex } { submatch-too-big }
+        {#1} { \int_eval:n { \l_@@_capturing_group_int - 1 } }
     \fi:
   }
 \cs_new_protected:Npn \@@_replacement_put_submatch_aux:n #1
@@ -7260,6 +7263,8 @@
     missing~right~
     \int_compare:nTF { #1 = 1 } { parenthesis } { parentheses } .
   }
+\__kernel_msg_new:nnn { regex } { submatch-too-big }
+  { Submatch~#1~used~but~regex~only~has~#2~group(s) }
 %    \end{macrocode}
 %
 % Some escaped alphanumerics are not allowed everywhere.
