l3doc: Add hyperref target in every \cs (fixes #649)

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -1989,7 +1989,9 @@ and all files in that bundle must be distributed together.
 %    \begin{macrocode}
     \mode_if_math:T { \mbox }
       {
+        \mode_leave_vertical:
         \verbatim@font
+        \HD@target
         \@@_if_almost_str:VT \l_@@_cmd_tl
           {
             \__kernel_tl_set:Nx \l_@@_cmd_tl { \tl_to_str:N \l_@@_cmd_tl }
