--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -1601,7 +1601,7 @@
 % \begin{macro}[EXP]{\exp_not:V}
 % \begin{macro}[EXP]{\exp_not:v}
 %   All these except \cs{exp_not:c} call the kernel-internal
-%   \cs{__kernel_exp_not:w} namely \tn{tex_unexpanded:D}.
+%   \cs{__kernel_exp_not:w} namely \cs{tex_unexpanded:D}.
 %    \begin{macrocode}
 \cs_new:Npn \exp_not:c #1 { \exp_after:wN \exp_not:N \cs:w #1 \cs_end: }
 \cs_new:Npn \exp_not:o #1 { \__kernel_exp_not:w \exp_after:wN {#1} }
