Adjust mark-up, based on more checking of the index

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -866,7 +866,7 @@
 %   \item Where possible, declare all variables and functions (using
 %     \cs{cs_new:Npn}, \cs{tl_new:N}, etc.) before use.
 %   \item Prefer \enquote{higher-level} functions over \enquote{lower-level},
-%     where possible. So for example use \cs{cs_if_exist:N(TF)} and not
+%     where possible. So for example use \cs{cs_if_exist:NTF} and not
 %     \cs{if_cs_exist:N}.
 %   \item Use space to make code readable. In general, we recommend
 %     a layout such as:
