--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1201,7 +1201,7 @@
 % \begin{macro}[EXP]{\@@_case:nnTF, \@@_case_e:nnTF}
 % \begin{macro}[EXP]
 %   {\@@_case:nw, \@@_case_e:nw, \@@_case_end:nw}
-%   Much the same as \cs[index=tl_case:nn]{tl_case:nn(TF)} here:
+%   Much the same as \cs{tl_case:nnTF} here:
 %   just a change in the internal comparison.
 %    \begin{macrocode}
 \cs_new:Npn \str_case:nn #1#2
