--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1675,7 +1675,7 @@
 % \begin{macro}{\@@_case:nw, \@@_case_end:nw}
 %   For integer cases, the first task to fully expand the check
 %   condition. The over all idea is then much the same as for
-%   \cs{tl_case:nn(TF)} as described in \pkg{l3tl}.
+%   \cs{tl_case:nnTF} as described in \pkg{l3tl}.
 %    \begin{macrocode}
 \cs_new:Npn \int_case:nnTF #1
   {
