Implement \str_map_tokens:nn (see #900)

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1247,7 +1247,7 @@
 % \begin{macro}{\str_map_variable:nNn}
 % \begin{macro}{\str_map_break:}
 % \begin{macro}{\str_map_break:n}
-% \begin{macro}[rEXP]{\@@_map_function:w, \@@_map_function:Nn}
+% \begin{macro}[rEXP]{\@@_map_function:w, \@@_map_function:nn}
 % \begin{macro}{\@@_map_inline:NN, \@@_map_variable:NnN}
 %   The inline and variable mappings are similar to the usual token list
 %   mappings but start out by turning the argument to an ``other
@@ -1255,7 +1255,7 @@
 %   require \cs{__kernel_str_to_other:n}, quadratic in the string length.  To deal
 %   with spaces in that case, \cs{@@_map_function:w} replaces the
 %   following space by a braced space and a further call to itself.
-%   These are received by \cs{@@_map_function:Nn}, which passes
+%   These are received by \cs{@@_map_function:nn}, which passes
 %   the space to |#1| and calls \cs{@@_map_function:w} to deal with the
 %   next space.  The space before the braced space allows to optimize
 %   the \cs{q_@@_recursion_tail} test.  Of course we need to include a
@@ -1273,7 +1273,7 @@
 \cs_new:Npn \str_map_function:nN #1#2
   {
     \exp_after:wN \@@_map_function:w
-    \exp_after:wN \@@_map_function:Nn \exp_after:wN #2
+    \exp_after:wN \@@_map_function:nn \exp_after:wN #2
       \__kernel_tl_to_str:w {#1}
       \q_@@_recursion_tail ? ~
     \prg_break_point:Nn \str_map_break: { }
@@ -1282,12 +1282,12 @@
   { \exp_args:No \str_map_function:nN }
 \cs_new:Npn \@@_map_function:w #1 ~
   { #1 { ~ { ~ } \@@_map_function:w } }
-\cs_new:Npn \@@_map_function:Nn #1#2
+\cs_new:Npn \@@_map_function:nn #1#2
   {
     \if_meaning:w \q_@@_recursion_tail #2
       \exp_after:wN \str_map_break:
     \fi:
-    #1 #2 \@@_map_function:Nn #1
+    #1 #2 \@@_map_function:nn {#1}
   }
 \cs_generate_variant:Nn \str_map_function:NN { c }
 \cs_new_protected:Npn \str_map_inline:nn #1#2
