Add new map functions directly to stable

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -447,6 +447,19 @@
 %   \meta{string} is empty.  See also \cs{str_map_inline:Nn}.
 % \end{function}
 %
+% \begin{function}[rEXP, added = 2021-05-05]
+%   {\str_map_tokens:nn, \str_map_tokens:Nn, \str_map_tokens:cn}
+%   \begin{syntax}
+%     \cs{str_map_tokens:nn} \Arg{token list} \Arg{code}
+%     \cs{str_map_tokens:Nn} \meta{str~var} \Arg{code}
+%   \end{syntax}
+%   Converts the \meta{token list} to a \meta{string} then applies
+%   \meta{code} to every \meta{character} in the \meta{string} including
+%   spaces.  The \meta{code} receives each character as a trailing brace
+%   group.  This is equivalent to \cs{str_map_function:nN} if the
+%   \meta{code} consists of a single function.
+% \end{function}
+%
 % \begin{function}[added = 2017-10-08, rEXP]{\str_map_break:}
 %   \begin{syntax}
 %     \cs{str_map_break:}
@@ -1347,6 +1360,24 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}[rEXP]{\str_map_tokens:Nn, \str_map_tokens:cn}
+% \begin{macro}[rEXP]{\str_map_tokens:nn}
+%   Uses an auxiliary of \cs{str_map_function:NN}.
+%    \begin{macrocode}
+\cs_new:Npn \str_map_tokens:nn #1#2
+  {
+    \exp_args:Nno \use:nn
+      { \@@_map_function:w \@@_map_function:nn {#2} }
+      { \__kernel_tl_to_str:w {#1} }
+      \q_@@_recursion_tail ? ~
+    \prg_break_point:Nn \str_map_break: { }
+  }
+\cs_new:Npn \str_map_tokens:Nn { \exp_args:No \str_map_tokens:nn }
+\cs_generate_variant:Nn \str_map_tokens:Nn { c }
+%    \end{macrocode}
 % \end{macro}
 % \end{macro}
 %
