Change "mapping to" to "mapping over" [ci skip]

--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -396,7 +396,7 @@
 %   \end{texnote}
 % \end{function}
 %
-% \section{Mapping to comma lists}
+% \section{Mapping over comma lists}
 %
 % The functions described in this section apply a specified function
 % to each item of a comma list.
@@ -1622,7 +1622,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \subsection{Mapping to comma lists}
+% \subsection{Mapping over comma lists}
 %
 % \begin{macro}{\clist_map_function:NN, \clist_map_function:cN}
 % \UnitTested
