--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -2244,7 +2244,7 @@ and all files in that bundle must be distributed together.
 % \begin{macro}{\@@_names_typeset:}
 % \begin{macro}{\@@_names_typeset_auxi:n}
 %   This code is in particular used when typesetting function names in a
-%   \env{function} environment.  The mapping to \cs{l_@@_names_block_tl}
+%   \env{function} environment.  The mapping over \cs{l_@@_names_block_tl}
 %   cannot use \cs{tl_map_inline:Nn} because the code following |\\|
 %   would not be expandable, thus breaking \tn{bottomrule}.
 %
