--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -372,7 +372,7 @@
 %   \meta{token list variable} is assigned locally.
 % \end{function}
 %
-% \section{Mapping to property lists}
+% \section{Mapping over property lists}
 %
 % All mappings are done at the current group level, \emph{i.e.}~any
 % local assignments made by the \meta{function} or \meta{code} discussed
@@ -1242,7 +1242,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \subsection{Mapping to property lists}
+% \subsection{Mapping over property lists}
 %
 % \begin{macro}[tested = m3prop003]
 %   {
