--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -521,7 +521,7 @@
 %   available.
 % \end{function}
 %
-% \section{Mapping to token lists}
+% \section{Mapping over token lists}
 %
 % All mappings are done at the current group level, \emph{i.e.}~any
 % local assignments made by the \meta{function} or \meta{code} discussed
@@ -2458,7 +2458,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \subsection{Mapping to token lists}
+% \subsection{Mapping over token lists}
 %
 % \begin{macro}{\tl_map_function:nN}
 % \begin{macro}{\tl_map_function:NN, \tl_map_function:cN}
@@ -2814,7 +2814,7 @@
 % \begin{macro}{\tl_head:w,\@@_tl_head:w}
 % \begin{macro}{\tl_tail:N, \tl_tail:n, \tl_tail:V, \tl_tail:v, \tl_tail:f}
 %   Finding the head of a token list expandably always strips braces, which
-%   is fine as this is consistent with for example mapping to a list. The
+%   is fine as this is consistent with for example mapping over a list. The
 %   empty brace groups in \cs{tl_head:n} ensure that a blank argument gives an
 %   empty result. The result is returned within the \tn{unexpanded} primitive.
 %   The approach here is to use \cs{if_false:} to allow us to use |}| as
