Actually fix unbracing behaviour of \clist_map_tokens:Nn (see #900)

--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -1798,7 +1798,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\clist_map_tokens:nn, \@@_map_tokens_n:nw}
+% \begin{macro}{\clist_map_tokens:nn, \@@_map_tokens_n:nw, \@@_use_ii_i:nn}
 %   Similar to \cs{clist_map_function:nN} but with a different way of
 %   grabbing items because we cannot use \cs{exp_after:wN} to pass the
 %   \meta{code}.
@@ -1814,11 +1814,12 @@
     \tl_if_empty:oF { \use_none:nn #2 ? }
       {
         \exp_args:No \@@_if_recursion_tail_break:nN {#2} \clist_map_break:
-        \exp_after:wN \@@_map_unbrace:wn
-        \exp:w \tl_trim_spaces_apply:oN {#2} \exp_end: , {#1}
+        \tl_trim_spaces_apply:oN {#2} \@@_use_ii_i:nn
+        \@@_map_unbrace:wn , {#1}
       }
     \@@_map_tokens_n:nw {#1} \prg_do_nothing:
   }
+\cs_new:Npn \@@_use_ii_i:nn #1#2 { #2 #1 }
 %    \end{macrocode}
 % \end{macro}
 %
