implement safer fast group_align_safe_begin:
This commit doesn't use any non-standard category codes but instead uses
a minus sign to suppress any output from \exp:w. The result is a bit
slower than the code in the previous commit.

--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -1637,11 +1637,8 @@
 %   that the successive expansions of \cs{group_align_safe_begin/end:}
 %   are always brace balanced.
 %    \begin{macrocode}
-\group_begin:
-\tex_catcode:D `\^^@ = 2 \exp_stop_f:
 \cs_new:Npn \group_align_safe_begin:
-  { \exp:w \if_false: { \fi: `^^@ \exp_stop_f: }
-\group_end:
+  { \exp:w \if_false: { \fi: -`} \exp_stop_f: }
 \cs_new:Npn \group_align_safe_end:
   { \if_int_compare:w `{ = \c_zero_int } \fi: }
 %    \end{macrocode}
