Define \g__kernel_backend_header_bool in generic mode (fixes #905)

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1756,11 +1756,15 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}{\g__kernel_backend_header_bool}
 % Load the dynamic code and standard back-end.
 %    \begin{macrocode}
 \sys_everyjob:
+\bool_new:N \g__kernel_backend_header_bool
+\bool_gset_true:N \g__kernel_backend_header_bool
 \sys_load_backend:n { }
 %    \end{macrocode}
+% \end{macro}
 %
 %  For the generic loader, a few final steps to take. Turn of \cs{expl3}
 %  syntax and tidy up the small number of temporary changes.
