--- a/l3kernel/l3cctab.dtx
+++ b/l3kernel/l3cctab.dtx
@@ -110,7 +110,7 @@
 %   matching \cs{cctab_begin:N}.
 % \end{function}
 %
-% \begin{function}[added = 2020-05-19, updated = 2020-07-02]{\cctab_select:N}
+% \begin{function}[added = 2020-05-19, updated = 2020-07-02]{\cctab_select:N, \cctab_select:c}
 %   \begin{syntax}
 %     \cs{cctab_select:N} \meta{category code table}
 %   \end{syntax}
