Implement \cctab_item:Nn to access catcode of a specific char (fixes #880)

--- a/l3kernel/l3cctab.dtx
+++ b/l3kernel/l3cctab.dtx
@@ -120,6 +120,15 @@
 %   and \cs{cctab_gset:Nn}.
 % \end{function}
 %
+% \begin{function}[EXP, added = 2021-05-10]{\cctab_item:Nn, \cctab_item:cn}
+%   \begin{syntax}
+%     \cs{cctab_item:Nn} \meta{category code table} \Arg{integer expression}
+%   \end{syntax}
+%   Determines the \meta{character} with character code given by the
+%   \meta{integer expression} and expands to its category code specified
+%   by the \meta{category code table}.
+% \end{function}
+%
 % \section{Category code table conditionals}
 %
 % \begin{function}[pTF]{\cctab_if_exist:N, \cctab_if_exist:c}
@@ -659,6 +668,34 @@
       }
   }
 %    \end{macrocode}
+%
+%
+% \begin{macro}{\cctab_item:Nn, \cctab_item:cn}
+%   Evaluate the integer argument only once.  In most engines the
+%   |cctab| variable only has $256$ entries so we only look up the
+%   catcode for these entries, otherwise we use the current catcode.  In
+%   particular, for out-of-range values we use whatever fall-back
+%   \cs{char_value_catcode:n}.  In \LuaTeX{}, we use the
+%   |tex.getcatcode| function.
+%    \begin{macrocode}
+\cs_new:Npn \cctab_item:Nn #1#2
+  { \exp_args:Nf \@@_item:nN { \int_eval:n {#2} } #1 }
+\sys_if_engine_luatex:TF
+  {
+    \cs_new:Npn \@@_item:nN #1#2
+      { \lua_now:e { tex.print(-2, tex.getcatcode(\int_use:N #2, #1)) } }
+  }
+  {
+    \cs_new:Npn \@@_item:nN #1#2
+      {
+        \int_compare:nNnTF {#1} < { 256 }
+          { \intarray_item:Nn #2 { #1 + 1 } }
+          { \char_value_catcode:n {#1} }
+      }
+  }
+\cs_generate_variant:Nn \cctab_item:Nn { c }
+%    \end{macrocode}
+% \end{macro}
 %
 % \subsection{Category code table conditionals}
 %
