Correct some grammar [ci skip]

--- a/l3kernel/l3color.dtx
+++ b/l3kernel/l3color.dtx
@@ -158,8 +158,8 @@
 %   red!50!cyan
 % \end{verbatim}
 % will result in a color specification using the |rgb| model, made up of
-% $50\,\%$ red and  $50\,\%$ of cyan \emph{expressed in \texttt{rgb}}. As color
-% model interconversion is not exact.
+% $50\,\%$ red and  $50\,\%$ of cyan \emph{expressed in \texttt{rgb}}.
+% This may be important as color model interconversion is not exact.
 %
 % The one exception to the above is where the first model in an expression is
 % |gray|. In this case, the order of mixing is \enquote{swapped} internally, so
