Update keyval internal following align safe change

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1318,7 +1318,8 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_blank_true:w \s_@@_mark \s_@@_stop \@@_trim:nN #1 \@@_key:nn
   { \@@_loop_other:nnw }
-\cs_new:Npn \@@_blank_key_error:w \s_@@_mark \s_@@_stop \exp_not:n #1
+\cs_new:Npn \@@_blank_key_error:w
+  \s_@@_mark \s_@@_stop \group_align_safe_end: \exp_not:n #1
   {
     \__kernel_msg_expandable_error:nn
       { keyval } { blank-key-name }
